[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/weapon.gd" type="Script" id=1]
[ext_resource path="res://fonts/novem___.ttf" type="DynamicFontData" id=2]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="DynamicFont" id=2]
extra_spacing_char = 1
font_data = ExtResource( 2 )

[node name="weapon" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="bullet_cooldown" type="Timer" parent="."]
one_shot = true

[node name="pulse" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="muzzle" type="Position2D" parent="."]
position = Vector2( 106.578, 0 )

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="name" type="Label" parent="."]
visible = false
margin_left = -197.681
margin_top = -42.7615
margin_right = 196.319
margin_bottom = -18.7615
custom_fonts/font = SubResource( 2 )
text = "SAMPLE TEXT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sound" type="AudioStreamPlayer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_weapon_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_weapon_body_exited"]
[connection signal="timeout" from="pulse" to="." method="emit_pulse_timeout"]
